--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: yin20030731
+  alioss:
+    access-key-id: LTAI5tFfdEyRRYb7CdauXwzi
+    access-key-secret: tmMVwiBrY4D9o4wo1j2OBzuD0SPF66
+    endpoint: oss-cn-beijing.aliyuncs.com
+    bucket-name: sky-take-out-charlotteyin
