--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ sky:
     username: root
     password: yin20030731
   alioss:
-    access-key-id: LTAI5tFfdEyRRYb7CdauXwzi
-    access-key-secret: tmMVwiBrY4D9o4wo1j2OBzuD0SPF66
+    access-key-id: ${ALIYUN_ACCESS_KEY_ID}
+    access-key-secret: ${ALIYUN_ACCESS_KEY_SECRET}
     endpoint: oss-cn-beijing.aliyuncs.com
     bucket-name: sky-take-out-charlotteyin
