--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,6 +6,11 @@ sky:
     database: sky_take_out
     username: root
     password: yin20030731
+  redis:
+    host: localhost
+    port: 6379
+    password: yin2030731
+    database: 0
   alioss:
     access-key-id: ${ALIYUN_ACCESS_KEY_ID}
     access-key-secret: ${ALIYUN_ACCESS_KEY_SECRET}
